# budgetapi

./: .gitignore  Dockerfile  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml  solutions.sql
budgetapi/: manage.py
budgetapi/budgetapi/: __init__.py  asgi.py  permissions.py  renderers.py  settings.py  urls.py  wsgi.py
budgetapi/categories/: admin.py  models.py  permissions.py  renderers.py  serializers.py  urls.py  views.py
budgetapi/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
budgetapi/celeryapp/: __init__.py  tasks.py
budgetapi/transactions/: admin.py  filters.py  helpers.py  models.py  serializers.py  urls.py  views.py
budgetapi/transactions/migrations/: 0001_initial.py
budgetapi/users/: admin.py  forms.py  models.py
budgetapi/users/management/commands/: ensure_superuser.py
budgetapi/users/migrations/: 0001_initial.py
nginx/: nginx.conf
scripts/: migrate.sh  runserver.sh
