[tool.poetry]
name = "budgetapi"
version = "0.1.0"
description = "An API to track spendings."
authors = ["Danila Kritsky <danilakritsky@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
drf-spectacular = "^0.24.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.990"
bandit = "^1.7.4"
safety = "^2.3.1"
ruff = "^0.0.120"
f = "^0.0.1"


[tool.poetry.group.api.dependencies]
django = "^4.1.3"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
dj-rest-auth = "^2.2.5"
django-allauth = "^0.51.0"
psycopg2-binary = "^2.9.5"
django-cors-headers = "^3.13.0"
gunicorn = "^20.1.0"
redis = "^4.3.4"
celery = "^5.2.7"
flower = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
preview = true
line-length = 79

[tool.mypy]
show_error_codes = true
allow_redefinition = true
ignore_missing_imports = true
disable_error_code = ["union-attr", "return", "no-redef"]

[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2

[tool.ruff]
line-length = 79
ignore = [
    "E999"
]